--- a/emutemplate.html
+++ b/emutemplate.html
@@ -2,11 +2,11 @@
 <head> 
     <script>
       window.gameconfig = {
-        name: "Mario Kart 64 - Amped Up",
-        url: "https://cdn.jsdelivr.net/gh/bubbls/ugss@main/mk64ampedup/Mario%20Kart%2064%20-%20Amped%20Up.z64",
-        core: "n64",
+        name: "{Name}",
+        url: "{ROM url through jsdelivr}",
+        core: "{core}",
         min: 1,
-        max: 2,
+        max: {amount of parts},
       };
     </script>
     <script>
